--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
      <head>
-
+        <meta charset="utf-8" />
+        <title>ACTIVIDAD 1</title>
+      
     </head>
     <body>
-
+            <header>el encabezamiento</header>
+            <nav>diferentes enlaces</nav>
+            <section>
+            <article>articulo</article>
+            <article>articulo</article>
+            <article>articulo</article>
+            </section>
+            <footer>pie de pagina</footer>
     </body>
 </html>
