--- a/index.html
+++ b/index.html
@@ -6,13 +6,26 @@
       
     </head>
     <body>
-            <header>el encabezamiento</header>
-            <nav>diferentes enlaces</nav>
+            <h1><header>Fenomenologia de la obra</header></h1>
             <section>
-            <article>articulo</article>
-            <article>articulo</article>
-            <article>articulo</article>
+            <article>
+            <h2><b><p>Contenido de la obra</b></p></h2>
+            La <i>Idea</i> en su ser en y para si misma , al regresar del gran circulo en que , a partir de su ser en si, recorrio los sucesivos momentos de su alterialidad, constituye el objeto de la <b>filosfia del<br>
+            espiritu</b>
+            <h2><b><p>Importancia de la obra</b></p></h2>
+            Esta obra es considerada como una de las más <b>influyentes</b> de la filosofia occidental. A través de ella, Hegel introduce conceptos que marcarán profundamente la <i>metafisica</i>, la <b>lógica</b> y la<br>
+            <i>teoría del conocimiento</i>.
+            <b><h2>Frase celebre</h2></b>
+            "Lo verdadero es el todo"<br>
+            (G.W.F.Hegel, 1807)
+            <b><h2>Comentario personal</h2></b>
+            En mi opinión, esta obra es <b>fundamental</b> para comprender el pensamiento moderno. Sin embargo, algunos pasajes resultan <i>enigmáticos</i> y requieren una lectura detenida.
+            <b><h3>Reflexion adicional</h3></b>
+            Leer la <i>Fenomenologia del espiritu</i> es como recorrer un camino lleno de <b>contradicciones</b> y a la vez de profundas revelaciones<br>
+            <b>Consejo para estudiantes</b>: no desesperar ante la dificultad inicial, pues cada capítulo aporta una nueva visión que se aclara al final del recorrido.
+            </article>
+
             </section>
-            <footer>pie de pagina</footer>
+            
     </body>
 </html>
